SERVER-20877 - Allow getSession to specify if a WiredTiger txn is needed